Adjust JSON for AddressBook to include meetings